--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
     .animal-card img {
       width: 100%;
       border-radius: 8px;
+      height: 200px;
+      object-fit: cover;
     }
     form {
       display: flex;
@@ -124,17 +126,17 @@
       <h2>Наші мешканці</h2>
       <div class="animals">
         <div class="animal-card">
-          <img src="https://placekitten.com/300/200" alt="Кіт Мурчик">
+          <img src="images/murchyk.png" alt="Кіт Мурчик">
           <h3>Мурчик</h3>
           <p>2 роки. Добрий, лагідний та любить гратися з дітьми.</p>
         </div>
         <div class="animal-card">
-          <img src="https://placekitten.com/301/200" alt="Кішка Соня">
+          <img src="images/sonia.png" alt="Кішка Соня">
           <h3>Соня</h3>
           <p>1 рік. Спокійна, ніжна, чудово ладнає з іншими котами.</p>
         </div>
         <div class="animal-card">
-          <img src="https://placekitten.com/302/200" alt="Пес Барс">
+          <img src="images/bars.png" alt="Пес Барс">
           <h3>Барс</h3>
           <p>3 роки. Активний і вірний друг, чудовий охоронець.</p>
         </div>
